<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgDefault"
    android:orientation="vertical"
    tools:context=".ui.classification.InfoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_Bar_Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgDefault">

        <include layout="@layout/result_toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintTop_toBottomOf="@+id/collapse_result">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/card_constraint"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:padding="10dp"
                    android:weightSum="2">

                    <ImageView
                        android:id="@+id/image_result"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/hasil_tangkapan_gambar"
                        app:layout_constraintBottom_toBottomOf="@id/card_constraint"
                        app:layout_constraintEnd_toStartOf="@id/pie_chart"
                        app:layout_constraintStart_toStartOf="@id/card_constraint"
                        app:layout_constraintTop_toTopOf="@id/card_constraint"
                        tools:src="@drawable/ic_place_holder" />

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/pie_chart"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:layout_constraintBottom_toBottomOf="@id/card_constraint"
                        app:layout_constraintEnd_toEndOf="@id/card_constraint"
                        app:layout_constraintStart_toEndOf="@id/image_result"
                        app:layout_constraintTop_toTopOf="@id/card_constraint" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/alata"
                android:text="@string/identifikasi"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_sampah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:listitem="@layout/item_list_sampah" />


            <Button
                android:id="@+id/btn_more_take"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/more_take"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_sampah" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>